--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ header {
         height: 50vh;
         background: 
             linear-gradient(to right, rgba(1, 31, 106, 0.6), rgba(12, 139, 20, 0.6), rgba(109, 138, 13, 0.6)),
-            url('/img/hero.jpg');
+            url('../img/hero.jpg');
 
         background-size: cover;
         background-position: center;
