--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,17 @@
+title {
+    display: none;
+}
+
 * {
+    display: block;
     margin: 0;
     padding: 0;
-    display: block;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 300;
     font-style: normal;
-}s
+}
 
-
-header, main, section, footer, h1, h2, p {
+main, section, footer, h1, h2, p {
     margin: 20px 0;
 }
 
@@ -51,10 +54,14 @@ p, li {
 nav {
     position: fixed;
     
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
     background-color: #fff;
     width: 100%;
-
     z-index: 10;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 
     ul {
         list-style: none;
@@ -64,7 +71,6 @@ nav {
         align-items: center;
 
         a {
-            width: 90px;
             padding: 10px;
             text-align: center;
             text-decoration: none;
@@ -85,7 +91,7 @@ header {
     
     height: 50vh;
 
-    padding: 0 5%;
+    padding: 0 10%;
         
     display: flex;
     flex-direction: column;
@@ -126,8 +132,8 @@ header {
         margin: 0;
         color: #fff;
         text-align: left;
-        font-size: 10px;
-        line-height: 15px;
+        font-size: 15px;
+        line-height: 20px;
     }
 }
 
