--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,32 @@ p, li {
     text-align: justify;
 }
 
+.logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3px;
+
+    > div {
+        height: 20px;
+        width: 5px;
+        background-color: #F23041;
+        border-radius: 5px;
+    }
+
+    :nth-child(2) {
+        background-color: #04B2D9;
+    }
+
+    :nth-child(3) {
+        background-color: #F2CB05;
+    }
+
+    :nth-child(4) {
+        background-color: #05bc66;
+    }
+}
+
 .tag-container {
     display: flex;
     justify-content: flex-start;
@@ -46,12 +72,16 @@ p, li {
         }
 
         &:nth-child(4) {
-            background-color: #02733E;
+            background-color: #05bc66;
         }
     }
 }
 
 nav {
+    padding: 0 2%;
+
+    box-sizing: border-box;
+
     position: fixed;
     
     display: flex;
@@ -81,6 +111,33 @@ nav {
             background-color: #005700;
             font-weight: bolder;
             color: #fff;
+        }
+    }
+}
+
+.searchbox {
+    border-radius: 10px;
+    padding: 5px;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    background-color: rgb(241, 239, 239);
+    img {
+        width: 20px;
+        cursor: pointer;
+    }
+
+    input {
+        border: none;
+
+        background-color: inherit;
+        
+        &:focus{
+            outline: none;
+            border: none;
         }
     }
 }
@@ -115,7 +172,6 @@ header {
         background-position: center;
         background-repeat: no-repeat;
 
-        filter: blur(1.5px);
         z-index: -1;
     }
 
@@ -135,11 +191,179 @@ header {
         font-size: 15px;
         line-height: 20px;
     }
+
 }
 
 main {
     padding: 0 10%;
 }
+
+footer {
+    margin: 0;
+    padding: 30px 10%;
+
+    background-color: rgb(0, 0, 48);
+
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    gap: 20px;
+    flex-wrap: wrap;
+    
+
+    color: rgb(250, 250, 250);
+    text-align: center;
+
+    > div {     
+        flex: 1;
+        min-width: 200px;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+    }
+
+    a {
+        text-decoration: none;
+        color: rgb(250, 250, 250);
+        font-size: 11px;
+        margin-bottom: 10px;
+    }
+
+    h3 {
+        font-size: 16px;
+        font-weight: bolder;
+        margin-bottom: 10px;
+    }
+
+    .logo {
+
+        p {
+            font-size: 11px;
+            font-style: italic;
+            text-align: center;
+        }
+    }
+    
+}
+
+/* INICIO */
+
+main {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+
+    article {
+        border-radius: 20px;
+
+        padding: 20px;
+        
+        background: linear-gradient( rgba(242, 48, 64, 0.08), rgba(242, 48, 65, .25));
+
+
+        h2 {
+            text-align: center;
+            font-size: 20px;
+        }
+
+        p {
+            font-size: 14px;
+            line-height: 20px;
+        }
+
+    }
+
+    > :nth-child(2) {
+        background: linear-gradient( rgba(4, 178, 217, 0.08), rgba(4, 178, 217, .15));
+    }
+
+    > :nth-child(3) {
+        background: linear-gradient( rgba(242, 203, 5, 0.08), rgba(242, 203, 5, .15));
+    }
+
+    > :nth-child(4) {
+        background: linear-gradient( rgba(5, 188, 102, 0.08), rgba(5, 188, 102, .15));
+    }
+
+}
+
+section.recursos {
+    margin: 0;
+    padding: 20px 10%;
+
+    background: linear-gradient( rgba(5, 188, 102, 0.08), rgba(5, 188, 102, .15));
+
+    h2 {
+        text-align: center;
+        font-size: 20px;
+        font-weight: bolder;
+    }
+
+    .cards-container {
+        margin-top: 20px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        flex-wrap: wrap;
+    }
+
+    .card {
+        box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
+        border-radius: 10px;
+        overflow: hidden;
+
+        padding-bottom: 20px;
+        
+        background-color: #fff;
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+
+        width: 300px;
+
+        img {
+            width: 100%;
+        }
+
+        h3, p, a {
+            padding: 0 20px;
+        }
+
+        h3 {
+            font-size: 15px;
+        }
+
+        p {
+            margin: 0;
+            font-size: 12px;
+            line-height: 20px;
+            font-style: italic;
+        }
+
+        a {
+            margin-right: 20px;
+            align-self: flex-end;
+            padding: 5px 10px;    
+            border-radius: 10px;    
+            
+            background-color: #05bc66;
+            
+            text-align: center;
+            text-decoration: none;
+            color: #fff;
+            font-size: 12px;
+        }
+    }
+}
+
 
 
 /* RECURSOS */
@@ -171,3 +395,4 @@ main {
         color: #fff;
     }
 }
+
